--- a/src/index.html
+++ b/src/index.html
@@ -38,16 +38,16 @@
                     <a target="_blank" href="https://www.laboratoria.la/" class="dropdown-item">Laboratoria</a>
                 </div>
                 </li>
-                <li class="nav-item"><a href="#" class="nav-link">Contáctenos  </a></li>
+                <li class="nav-item"><a id="contactUs" href="#contactUs" class="nav-link">Contáctenos</a></li>
             </ul>
         </div>
         </nav>
     </div>
-    <center>
+    
     <div class="row clearfix headF">
-        <span class="col-12"><p class="bar"><img src="imagenes/bar.png" alt="bar"></p> </span>
+        <span class="col-12" style="text-align:center;"><p class="bar"><img src="imagenes/bar.png" alt="bar"></p> </span>
     </div>
-    </center> 
+   
     <div class="row">
         <div class="row clearfix flag"> 
             <span class="col-3  "><p><img src="imagenes/regtrans.png" alt="bandera"></p></span>
@@ -90,11 +90,37 @@
                 <p>Quedamos a su disposición ante cualquier consulta o necesidad de ampliar la información, para lo 
                 cual le agradeceremos contactarse con nostros mediante los medios de comunicación indicados en los 
                 apartados respectivos de esta página.</p>
-                <center><h2>LA PREVENCIÓN DE ACCIDENTES ES RESPONSABILIDAD DE TODOS</h2></center>
+                <h3 style="text-align:center;">LA PREVENCIÓN DE ACCIDENTES ES RESPONSABILIDAD DE TODOS</h3>
             </a>
         </div>
     </div>
 </section>
+
+<section class="contactU">
+    <div class="row">
+        <div class="contact" id="contact">
+            <a name="contactUs"><h2>DATOS DE CONTACTO REGTRANS</h2>
+                <P>Si tiene alguna consulta o necesita ampliar información, no dude en contactar con nosotros</P>
+                
+                <h4>Vías de contacto</h4>
+                <p>Puede contactar con nosotros vía correo electronico, Whatsapp, o puede llamar a los teléfonos indicados, en horas de apertura.</p>
+                <p>Horario apertura: INVIERNO: L - V: 9:00h a 13:00h - 17:00h a 20:00h  |  VERANO: L - V: 9:00h a 14:30h</P>
+
+                <h4>Dirección oficinas Regtrans:</h4>
+                <p>Calle Puma # 1181 (Recoleta)</P>
+
+                <h4>Teléfonos:</h4>
+                <p>LÍNEA FIJA: (+56 2) 3488 3832  |  CELULAR/WHATSAPP: (+56 9) 2222 2222</p>
+                <p>CORREO ELECTRÓNICO: info@regtrans.com</p>
+                <p>FACEBOOK: regtrans</p>
+
+                <h3 style="text-align:center;">LA PREVENCIÓN DE ACCIDENTES ES RESPONSABILIDAD DE TODOS</h3>
+            </a>
+        </div>
+    </div>
+</section>
+
+
 <section class="container-fluid headsBack ">       
     <div class="row" id="headsBack">
         <div  class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 headBack">
