--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
                 <P>Si tiene alguna consulta o necesita ampliar información, no dude en contactar con nosotros</P>
                 
                 <h4>Vías de contacto</h4>
-                <p>Puede contactar con nosotros vía correo electrónico, Whatsapp, o puede llamar a los teléfonos indicados, en horas de apertura.</p>
+                <p>Puede contactar con nosotros vía correo electrónico, whatsapp, o puede llamar a los teléfonos indicados, en horas de apertura.</p>
                 <p>Horario apertura: INVIERNO: L - V: 9:00h a 13:00h - 17:00h a 20:00h  |  VERANO: L - V: 9:00h a 14:30h</P>
 
                 <h4>Dirección oficinas Regtrans:</h4>
