--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,30 @@
         </div>
     </div>
 </section>
+<section class="contactU">
+    <div class="row">
+        <div class="contact" id="contact">
+            <a name="contactUs"><h2>DATOS DE CONTACTO REGTRANS</h2>
+                <p>Si tiene alguna consulta o necesita ampliar información, no dude en contactar con nosotros</p>
+                
+                <h4>Vías de contacto</h4>
+                <p>Puede contactar con nosotros vía correo electrónico, whatsapp, o puede llamar a los teléfonos indicados, en horas de apertura.</p>
+                <p>Horario apertura: INVIERNO: L - V: 9:00h a 13:00h - 17:00h a 20:00h  |  VERANO: L - V: 9:00h a 14:30h</p>
+
+                <h4>Dirección oficinas Regtrans:</h4>
+                <p>Calle Puma # 1181 (Recoleta)</p>
+
+                <h4>Teléfonos:</h4>
+                <p>LÍNEA FIJA: (+56 2) 3488 3832  |  CELULAR/WHATSAPP: (+56 9) 2222 2222</p>
+                <p>CORREO ELECTRÓNICO: info@regtrans.com</p>
+                <p>FACEBOOK: regtrans</p>
+
+                <h4 style="text-align:center;">LA PREVENCIÓN DE ACCIDENTES ES RESPONSABILIDAD DE TODOS</h4>
+                <h2>LA PREVENCIÓN DE ACCIDENTES ES RESPONSABILIDAD DE TODOS</h2>
+            </a>
+        </div>
+    </div>
+</section>
 <section class="container-fluid headsBack">       
     <div class="row" id="headsBack">
         <div  class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 headBack">
