--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                     <a id="aboutUs" href="#aboutUs" class="dropdown-item">Quiénes Somos</a>
                     <a target="_blank" href="http://www.cbs.cl/" class="dropdown-item">Bomberos</a>
                     <a target="_blank" href="http://www.carabineros.cl/" class="dropdown-item">Carabineros</a>
-                    <a target="_blank" href="http://www.svs.cl/institucional/mercados/consulta.php?mercado=S&Estado=VI&consulta=CSGEN" class="dropdown-item">Aserguradoras</a>
+                    <a target="_blank" href="http://www.svs.cl/institucional/mercados/consulta.php?mercado=S&Estado=VI&consulta=CSGEN" class="dropdown-item">Aseguradoras</a>
                     <a target="_blank" href="https://www.laboratoria.la/" class="dropdown-item">Laboratoria</a>
                 </div>
                 </li>
