--- a/Extra.html
+++ b/Extra.html
@@ -14,23 +14,32 @@
     <title>DataLovers</title>
 </head>
 <body>
-    
-
-<!--Creando responsive adaptable a cuelquier dimensión navbar-dark  navbar navbar-dark bg-primary-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Features</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
-        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+   <div id=headStart> 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+      <a class="navbar-brand btn btn-primary text-white" href="#"><h2>REGTRANS</h2><img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/23px-Flag_of_the_United_States.svg.png" alt="EEUU"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse btn btn-primary" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link text-white" href="#">Inicio <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white " href="#">Quiénes somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Contáctenos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled text-white" href="#" >Prevensión</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link disabled text-white" href="#" >Sitios de interés</a>
+            </li>
+        </ul>
       </div>
-    </div>
-  </nav>
+    </nav>
   <script src="./data/injuries/injuries.js"></script> 
 <script src="data.js"></script>
 <script src="main.js"></script> 
