--- a/src/Extra.html
+++ b/src/Extra.html
@@ -14,42 +14,5 @@
     <title>DataLovers</title>
 </head>
 <body>
-   <div id=headStart> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-      <a class="navbar-brand btn btn-primary text-white" href="#"><h2>REGTRANS</h2><img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/23px-Flag_of_the_United_States.svg.png" alt="EEUU"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse btn btn-primary" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link text-white" href="#">Inicio <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white " href="#">Quiénes somos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contáctenos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled text-white" href="#" >Prevensión</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link disabled text-white" href="#" >Sitios de interés</a>
-            </li>
-        </ul>
-      </div>
-    </nav>
-  <script src="./data/injuries/injuries.js"></script> 
-<script src="data.js"></script>
-<script src="main.js"></script> 
-<script src="json.js"></script> 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-<script src="https://www.gstatic.com/charts/loader.js"></script>
-<script>
- google.charts.load('current', {'packages':['corechart']});
-</script>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </body>
+</html>
