--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </button>
             </div> 
             <div class="modal-body">
-                <div id="MediaDiv" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div id="MediaDiv" >
                 </div>
             </div>
             <!--Boton cerrar de modal cálculo media-->
