--- a/src/Extra.html
+++ b/src/Extra.html
@@ -40,6 +40,36 @@
         </ul>
       </div>
     </nav>
+    <section class="container-fluid">
+      <div class="row" id="graphics">
+          <div  class="col-10 col-sm-10 col-md-5 col-lg-5 col-xl-5.5 graphic">
+              <div class="titles"> 
+              <p><strong>RERGISTROS POR EL MEDIO DE TRANSPORTE</strong></p>
+              </div>
+              <div id="graphTransport" class="chartGraph">        
+              </div>
+          </div>
+              <div class="col-10 col-sm-10 col-md-5 col-lg-5 col-xl-5.5 graphic">
+                  <div class="titles">
+                      <p><strong>REGISTROS POR DEPENDENCIA DE MEDIO DE TRANSPORTE</strong></p>
+                  </div>
+                  <div id="graphTransportTwo" class="chartGraph"><!--Imprimo gráfico  -->
+                  </div>        
+              </div>
+       </div>
+      </section>
+<footer class="page-footer"> 
+    <aside class="social-sharing">
+         <ul class="menu-social">
+            <li class="social-item"><a href="https://twitter.com/iniciarsesion?lang=es" target="_blank"><span class="screen-reader-text">Twitter</span></a></li>
+            <li class="social-item"><a href="https://es-la.facebook.com/" target="_blank"><span class="screen-reader-text">Facebook</span></a></li>
+            <li class="social-item"><a href="https://www.pinterest.com" target="_blank"><span class="screen-reader-text">Pinterest</span></a></li>
+            <li class="social-item"><a href="whatsapp://send?text=https://www.whatsapp.com/" data-action="share/whatsapp/share"><span class="screen-reader-text">Whatsapp</span></a></li>
+            <li class="social-item newsletter small "><span>Copyright © 2019 Marcela Arratia - Todos los derechos reservados</span></li>        
+            <li class="social-item labo"><span> <img src="imagenes/labo.png" alt="Laboratoria"> </span></li>
+        </ul>
+    </aside>
+</footer>
   <script src="./data/injuries/injuries.js"></script> 
 <script src="data.js"></script>
 <script src="main.js"></script> 
